# -*- coding: utf-8 -*-
[metadata]
name = multi_plankton_separation
summary = Automatic separation of objects in images containing multiple plankton organisms
description-file =
    README.md
author = Emma Amblard
author-email = emma.amblard@imev-mer.fr
version = 0.0.1
license = MIT
home-page = https://github.com/emmaamblard/multi_plankton_separation
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    multi_plankton_separation

[entry_points]
deepaas.v2.model =
    multi_plankton_separation = multi_plankton_separation.api
